set env REPO_TEMPLATE_DIR

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ QUART_SECRET_KEY=changeme
 GITHUB_OAUTH_CLIENT_ID=changeme-get-from-github
 GITHUB_OAUTH_CLIENT_SECRET=changeme-get-from-github
 GITHUB_OAUTH_REDIRECT_URI="https://example.com/githubcallback"
+REPO_TEMPLATE_DIR=/usr/src/app/src/repo-template-files/
