correct autorc (needs email to bootstrap git config)
added git-auto-issue-branch-creation.yml

--- a/src/repo-template-files/.autorc
+++ b/src/repo-template-files/.autorc
@@ -4,8 +4,9 @@
     "all-contributors",
     "first-time-contributor",
     "released"
-  ],  
+  ],
   "owner": "GITHUB_OWNER",
   "repo": "GITHUB_REPO_NAME",
   "name": "GITHUB_OWNER",
+  "email": "GITHUB_REPO_OWNER_EMAIL"
 }
