--- a/src/repo-template-files/.github/workflows/deploy.yml
+++ b/src/repo-template-files/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           fetch-depth: 0
 
       - name: Push to dokku
-        uses: dokku/github-action@main
+        uses: dokku/github-action@master
         with:
           git_remote_url: 'ssh://${{ secrets.DOKKU_HOST }}/${{ github.event.repository.name }}'
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
